auth part is working

--- a/templates/src/avatar_dropdown.html
+++ b/templates/src/avatar_dropdown.html
@@ -29,7 +29,7 @@
     {% if user.is_seller %}
     <li>
     <a
-      href="{% url 'products' pk=user.id %}"
+      href=""
       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white text-yellow-400"
       >My Products</a
     >
