--- a/templates/src/navbar.html
+++ b/templates/src/navbar.html
@@ -11,9 +11,9 @@
 
     <section id="p-list" class="col-span-3">
       <ul class="flex justify-evenly">
-        <li class=""></li>
-        <li class="">test list item</li>
-        <li class="">test list item</li>
+        <li class=""><a href="{% url 'add-new-food' %}">New Food Product</a></li>
+        <li class=""><a href="{% url 'add-new-electro' %}">New Electronic Product</a></li>
+        <li class=""><a href="">New Forniture Product</a></li>
       </ul>
     </section>
 
