add forniture create and update views

--- a/templates/src/navbar.html
+++ b/templates/src/navbar.html
@@ -13,7 +13,7 @@
       <ul class="flex justify-evenly">
         <li class=""><a href="{% url 'add-new-food' %}">New Food Product</a></li>
         <li class=""><a href="{% url 'add-new-electro' %}">New Electronic Product</a></li>
-        <li class=""><a href="">New Forniture Product</a></li>
+        <li class=""><a href="{% url 'add-new-forni' %}">New Forniture Product</a></li>
       </ul>
     </section>
 
