--- a/store_management/templates/store_management/create/forni.html
+++ b/store_management/templates/store_management/create/forni.html
@@ -5,8 +5,8 @@
 {% block content %}
 
 <div class="mt-2 text-center">
-    <h2 class="text-2xl font-bold">New Food Product</h2>
-  </div>
+    <h2 class="text-2xl font-bold">New Forniture Product</h2>
+</div>
   
   
   <div id="outer-form-container" class="mt-4 mx-2">
