add delete view

--- a/templates/src/components/edit_and_others.html
+++ b/templates/src/components/edit_and_others.html
@@ -7,12 +7,14 @@
     href="{% url 'food-update' pk=product.id %}"
     {% elif product.electronicproduct %}
     href="{% url 'electro-update' pk=product.id %}"
+    {% elif product.fornitureproduct %}
+    href="{% url 'forni-update' pk=product.id %}"
     {% endif %}
     class="text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2"
     >Edit</a
   >
   <a
-    href=""
+    href="{% url 'delete-product' name=product.name pk=product.pk %}"
     class="text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2"
     >Delete</a
   >
