--- a/templates/src/components/raiting_comment.html
+++ b/templates/src/components/raiting_comment.html
@@ -2,7 +2,7 @@
   <div class="flex items-center mb-4">
     <img
       class="w-10 h-10 me-4 rounded-full"
-      src="/docs/images/people/profile-picture-5.jpg"
+      src="/media/defaults/default-avatar.webp"
       alt=""
     />
     <div class="font-medium dark:text-white">
