--- a/templates/src/navbar.html
+++ b/templates/src/navbar.html
@@ -29,7 +29,7 @@
             {% include 'src/avatar_dropdown.html' %}
           </div>
         <div>          
-          <span><a href="">Cart</a></span>
+          <span><a href="{% url 'cart' %}">Cart</a></span>
         </div>
         {% endif %}
       </ul>
