fix cart creation problem

--- a/templates/src/components/product_card.html
+++ b/templates/src/components/product_card.html
@@ -22,6 +22,7 @@
       <span class="text-3xl font-bold text-gray-900 dark:text-white">
         {{product.foodproduct.price}}
         {{product.electronicproduct.price}}
+        {{product.fornitureproduct.price}}
         €
       </span>
 
