--- a/store_app/templates/store_app/cart.html
+++ b/store_app/templates/store_app/cart.html
@@ -32,12 +32,15 @@
 						</div>
 		
 						<div class="optns-container col-span-2 flex justify-center items-center">
-							<div>					
-								<button
-									class=" bg-red-600 hover:bg-red-700 border-l text-white font-bold rounded-lg focus:ring-4 px-2 py-1"
-								>
-								Remove from Cart
-								</button>
+							<div>
+								<form action="{% url 'remove-from-cart' pk=item.pk %}" method="post">
+									{% csrf_token %}					
+									<button
+										class=" bg-red-600 hover:bg-red-700 border-l text-white font-bold rounded-lg focus:ring-4 px-2 py-1"
+									>
+									<a href="">Remove from Cart</a>
+									</button>
+								</form>
 							</div>
 						</div>
 						
