--- a/templates/src/avatar_dropdown.html
+++ b/templates/src/avatar_dropdown.html
@@ -57,6 +57,13 @@
         >My orders</a
       >
     </li>
+    <li>
+      <a
+        href="{% url 'wish-list' %}"
+        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+        >Wish List</a
+      >
+    </li>
 
   </ul>
   <div class="py-2">
