--- a/templates/src/components/product_card.html
+++ b/templates/src/components/product_card.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-sm bg-white border border-gray-200 rounded-xl shadow hover:border-blue-900 hover:bg-blue-50 hover:border-2"
+  class="w-full max-w-sm bg-white border border-gray-200 rounded-xl shadow hover:border-blue-900 hover:border-2 "
 >
 <div class="flex justify-center">
   <img
