--- a/templates/src/components/raiting_comment.html
+++ b/templates/src/components/raiting_comment.html
@@ -18,6 +18,7 @@
   </div>
   <div class="flex items-center mb-1 space-x-1 rtl:space-x-reverse">
     <svg
+      id="example-star"
       class="w-4 h-4 text-yellow-300"
       aria-hidden="true"
       xmlns="http://www.w3.org/2000/svg"
