--- a/store_app/templates/store_app/product.html
+++ b/store_app/templates/store_app/product.html
@@ -131,6 +131,8 @@
 		<div id="card-placeholders" class="md:grid grid-cols-3 mx-4 mb-4">
 			<div class="col-span-1">{% include 'src/components/product/card_placeholder.html'%}</div>
 			<div class="col-span-1">{% include 'src/components/product/card_placeholder.html'%}</div>
+			<div class="col-span-1">{% include 'src/components/product/card_placeholder.html'%}</div>
+
 		</div>
 
 	</section>
