--- a/templates/src/base.html
+++ b/templates/src/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 
 		{% block css_block %}{% endblock css_block %}
+    <script src="{% static 'js/cart.js' %}" defer></script>
 		{% block js_block %}
     {% endblock js_block %}
 		{% compress css %}
