--- a/templates/src/components/edit_and_others.html
+++ b/templates/src/components/edit_and_others.html
@@ -1,6 +1,6 @@
 {% if user.id == product.seller.store_user_id %}
 
-<section id="actions" class="mt-4">
+<section id="actions" class="mt-4 mb-8 md:mb-0">
   <header class="sr-only">Modify product</header>
   <a
     {% if product.foodproduct %}
