--- a/store_app/templates/store_app/search.html
+++ b/store_app/templates/store_app/search.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <div class="col-span-2 flex items-center justify-center">
+    <div class="col-span-2 flex items-center justify-start ms-2">
         <button id="search-btn" type="submit" class="text-white  end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 ">Search</button>
     </div>
 </form>
