--- a/store_authentication/templates/store_auth/new_seller.html
+++ b/store_authentication/templates/store_auth/new_seller.html
@@ -25,7 +25,7 @@
 			class="bg-gray-50 rounded-lg"
 		>
 		<div id="btn-container" class="mt-4">
-			<button type="submit">Become a seller</button>
+			<button type="submit" class="font-semibold rounded-lg bg-yellow-400 hover:bg-yellow-500 text-white px-2 py-1">Become a seller</button>
 		</div>
 	</form>
 </div>
