--- a/store_app/templates/store_app/search_products.html
+++ b/store_app/templates/store_app/search_products.html
@@ -5,13 +5,41 @@
 
 
 {% block content %}
-<div id="list-container" class=" md:grid grid-cols-12">
-    {% for product in products %}
-    <div class="single-product-container mx-4 mt-4  md:col-span-6 lg:col-span-4">
-        {% include 'src/components/product_card.html'%}
-    </div>		
-    {% endfor %}
+<div class="mx-4 mb-4">
+    <aside id="search-bar" class="mb-4">
+		{%  include 'store_app/search.html'%}
+	</aside>
+    
+    {% if products %}
+    <div class="flex justify-center">
+        <h2 class="text-2xl font-bold">Search results</h2>
+    </div>
+    <div id="list-container" class=" md:grid grid-cols-12">
+        {% for product in products %}
+        <div class="single-product-container mx-4 mt-4  md:col-span-6 lg:col-span-4">
+            {% include 'src/components/product_card.html'%}
+        </div>		
+        {% endfor %}
+    </div>
+    <script>
+        const containers = document.getElementsByClassName('single-product-container');
+        for (const container of containers) {
+            container.addEventListener('click', () => {
+                const target = container.querySelector('.link-to-product');
+                target.click()
+            })
+        }
+    </script>
+    
+    {% else %}
+        <div class="flex justify-center">
+            <img src="/media/defaults/empty_state.png" alt="nothing found">
+            
+        </div>
+        <h2 class="text-center text-4xl font-semibold">No results have been found </h2>
+    
+
+    {% endif %}
+
 </div>
-
-
 {% endblock content %}
