--- a/templates/src/avatar_dropdown.html
+++ b/templates/src/avatar_dropdown.html
@@ -34,13 +34,7 @@
       >My Products</a
     >
     </li>
-    <li>
-      <a
-        href="#"
-        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-        >Earnings</a
-      >
-    </li>
+
     {% else %}
     <li>
     <a
@@ -52,7 +46,7 @@
     {% endif %}
     <li>
       <a
-        href="#"
+        href="{% url 'my-orders' %}"
         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
         >My orders</a
       >
