--- a/store_app/templates/store_app/product_list.html
+++ b/store_app/templates/store_app/product_list.html
@@ -7,9 +7,12 @@
 
 <div id="main-container" class="mx-4 mb-6">
 
-	<section class="">
+	<section class="flex flex-col">
 		<header class="flex justify-center my-4"><h2 class="text-2xl font-bold">{{seller_name|title}}</h2></header>
 		<p class="flex justify-center font-semibold text-lg">Product list</p>
+
+		<small class="text-gray-500 text-center font-semibold text-xs">total: {{n_products}}</small>
+
 	</section>
 
 	{% if no_products %}
